# nfd_library

./: .gitmodules  CMakeLists.txt  README.md  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win32.bat  build_win64.bat  build_win_generic.cmd
build_libs/: build_libs.pro
examples/C/: simple.c
examples/VB/: FormMain.Designer.vb
include/: nfd.h
lib_source/: lib_source.pro  nfd_lib.cpp  nfd_lib.h
res/: resource.rc
samples/VB/: FormMain.vb
src/: CMakeLists.txt  global.h
src/include/: nfd.h
src/lib/: CMakeLists.txt  nfd_lib.cpp  nfd_lib.h
